# 100xtemplates-core

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  tree.txt
apps/: __init__.py
apps/api-hono/: README.md  package.json  tsconfig.json
apps/api-hono/src/: index.ts
apps/dashboard/: package.json  tailwind.config.ts
apps/dashboard/src/app/: globals.css  page.tsx
apps/fastapi-app/: Dockerfile  main.py
apps/web/: gatsby-config.ts  package.json
apps/web/src/pages/: index.tsx
apps/web/src/utils/: cn.tsx
packages-py/: __init__.py
